Created HTML pages for Project Explorer

--- a/app/public/project-explorer/Search.html
+++ b/app/public/project-explorer/Search.html
@@ -4,11 +4,14 @@
         
         <h1>Project Explorer</h1>
         <h2>One stop database for final year project</h2>
-        <a href="/index.html ">Home</a>
+        <a href="/Home.html ">Home</a>
         <a href="/search.html">Projects</a>
-        <a href="/createproject.html">Submit</a>
+        <a href="/createproject.html">Createproject</a>
         <a href="/login.html">Login</a>
         <a href="/register.html">Register</a>
+        <a href="/Editproject.html">Editproject</a>
+        <a href="/Viewproject.html">Viewproject</a>
+        <a href="/Search.html">Search</a>
 
         <h3>Search Project By</h3>
 
@@ -25,7 +28,12 @@
             <option value="James_Correy">James Correy</option>
         </Select><br>
 
-        <h4>Project 4</h4>
+        <br>   
+        <input type="submit" />
+
+        <h4>Search Result</h4>
+
+        <h5>Project 4</h5>
         <ul>
             <li>Name:project 4</li>
             <li>Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
