--- a/app/public/project-explorer/ViewProject.html
+++ b/app/public/project-explorer/ViewProject.html
@@ -4,12 +4,15 @@
         <title>View Project</title>
         <h1>PROJECT EXOPLORER</h1>
         <h2>One stop database for final year project</h2>
-        <a href="/index.html ">Home</a>
+        <a href="/Home.html ">Home</a>
         <a href="/search.html">Projects</a>
-        <a href="/createproject.html">Submit</a>
+        <a href="/createproject.html">Createproject</a>
         <a href="/login.html">Login</a>
-        <a href="/register.html">Register</a><br>
-        
+        <a href="/register.html">Register</a>
+        <a href="/Editproject.html">Editproject</a>
+        <a href="/Viewproject.html">Viewproject</a>
+        <a href="/Search.html">Search</a>
+
         <h3>Project 4</h3>
         <a href="/editproject.html ">Edit Project</a>
         <body>
