--- a/app/public/project-explorer/Home.html
+++ b/app/public/project-explorer/Home.html
@@ -4,11 +4,14 @@
         <title>Home</title>
         <h1>PROJECT EXOPLORER</h1>
         <h2>One stop database for final year project</h2>
-        <a href="/index.html ">Home</a>
+        <a href="/Home.html ">Home</a>
         <a href="/search.html">Projects</a>
-        <a href="/createproject.html">Submit</a>
+        <a href="/createproject.html">Createproject</a>
         <a href="/login.html">Login</a>
         <a href="/register.html">Register</a>
+        <a href="/Editproject.html">Editproject</a>
+        <a href="/Viewproject.html">Viewproject</a>
+        <a href="/Search.html">Search</a>
 <h3>Welcome to project explorer</h3>
 <body>
 Project explorer is a repository for final year projects across all departments at your institution. You can upload and search projects and search for others.
